plugins/org.eclipse.xpand3/src/org/eclipse/xpand3/parser/Xpand3Parser.java
// $ANTLR 3.0.1 src/org/eclipse/xpand3/parser/Xpand3.g 2008-02-28 15:53:24
 	
package org.eclipse.xpand3.parser; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
/** START EDITED 'abstract' added */
public abstract class Xpand3Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LG", "RG", "DEFINE", "ENDDEFINE", "AROUND", "ENDAROUND", "TEXT", "StringLiteral", "IntLiteral", "Identifier", "EscapeSequence", "UnicodeEscape", "OctalEscape", "HexDigit", "Letter", "JavaIDDigit", "WS", "COMMENT", "LINE_COMMENT", "REM_COMMENT_OUT", "REM_COMMENT", "'IMPORT'", "'EXTENSION'", "'import'", "';'", "'extension'", "'reexport'", "'('", "','", "'*'", "')'", "'FOR'", "'-'", "'ERROR'", "'EXPAND'", "'FOREACH'", "'SEPARATOR'", "'FILE'", "'ENDFILE'", "'AS'", "'ITERATOR'", "'ENDFOREACH'", "'IF'", "'ENDIF'", "'ELSEIF'", "'ELSE'", "'LET'", "'ENDLET'", "'PROTECT'", "'CSTART'", "'CEND'", "'ID'", "'DISABLE'", "'ENDPROTECT'", "'context'", "'if'", "'WARNING'", "':'", "'around'", "'::'", "'private'", "'cached'", "'create'", "'JAVA'", "'.'", "'Collection'", "'List'", "'Set'", "'let'", "'='", "'->'", "'?'", "'then'", "'else'", "'switch'", "'{'", "'default'", "'}'", "'case'", "'||'", "'&&'", "'implies'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'+'", "'/'", "'!'", "'GLOBALVAR'", "'new'", "'false'", "'true'", "'null'", "'typeSelect'", "'collect'", "'select'", "'selectFirst'", "'reject'", "'exists'", "'notExists'", "'sortBy'", "'forAll'", "'|'", "'['", "']'"
    };
    public static final int IntLiteral=12;
    public static final int Identifier=13;
    public static final int HexDigit=17;
    public static final int WS=20;
    public static final int ENDDEFINE=7;
    public static final int REM_COMMENT=24;
    public static final int RG=5;
    public static final int COMMENT=21;
    public static final int StringLiteral=11;
    public static final int LINE_COMMENT=22;
    public static final int JavaIDDigit=19;
    public static final int Letter=18;
    public static final int DEFINE=6;
    public static final int UnicodeEscape=15;
    public static final int EscapeSequence=14;
    public static final int EOF=-1;
    public static final int TEXT=10;
    public static final int ENDAROUND=9;
    public static final int OctalEscape=16;
    public static final int REM_COMMENT_OUT=23;
    public static final int AROUND=8;
    public static final int LG=4;

        public Xpand3Parser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[60+1];
         }
        
    
    /* START EDITED */
    protected abstract void ruleEntered(String ruleName);
	protected abstract void ruleLeft(String ruleName);
	protected abstract void assignNextNodeTo(String alias);
	protected abstract void tokenConsumed(String name, CommonToken ct);
    /* END EDITED */

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "src/org/eclipse/xpand3/parser/Xpand3.g"; }



    // $ANTLR start r_file
    // src/org/eclipse/xpand3/parser/Xpand3.g:15:1: r_file : ( r_nsImport )* ( r_abstractDeclaration )* EOF ;
    public final void r_file() throws RecognitionException {
        try {
        	/** START EDITED */
        	if(backtracking ==0) {
    		   ruleEntered("r_file");
    		}
    		/** END EDITED */
            // src/org/eclipse/xpand3/parser/Xpand3.g:15:9: ( ( r_nsImport )* ( r_abstractDeclaration )* EOF )
            // src/org/eclipse/xpand3/parser/Xpand3.g:16:2: ( r_nsImport )* ( r_abstractDeclaration )* EOF
            {
            // src/org/eclipse/xpand3/parser/Xpand3.g:16:2: ( r_nsImport )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==LG) ) {
                    int LA1_2 = input.LA(2);

                    if ( ((LA1_2>=25 && LA1_2<=26)) ) {
                        alt1=1;
                    }


                }
                else if ( (LA1_0==27||LA1_0==29) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/org/eclipse/xpand3/parser/Xpand3.g:16:3: r_nsImport
            	    {
            	    pushFollow(FOLLOW_r_nsImport_in_r_file40);
            	    r_nsImport();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // src/org/eclipse/xpand3/parser/Xpand3.g:17:2: ( r_abstractDeclaration )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==LG||LA2_0==Identifier||LA2_0==58||LA2_0==62||(LA2_0>=64 && LA2_0<=66)||(LA2_0>=69 && LA2_0<=71)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/org/eclipse/xpand3/parser/Xpand3.g:17:3: r_abstractDeclaration
            	    {
            	    pushFollow(FOLLOW_r_abstractDeclaration_in_r_file46);
            	    r_abstractDeclaration();
            	    _fsp--;
            	    if (failed) return ;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            /** START EDITED */
            if(backtracking==0) {
              tokenConsumed(null, (CommonToken) input.LT(1));
            }
            /** END EDITED */
            match(input,EOF,FOLLOW_EOF_in_r_file53); if (failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        	/** START EDITED */
        	if(backtracking==0) {
    		  ruleLeft("r_file");
    		}
    		/** END EDITED */
        }
        return ;
    }
    // $ANTLR end r_file


    // $ANTLR start r_nsImport
    // src/org/eclipse/xpand3/parser/Xpand3.g:21:1: r_nsImport : ( LG 'IMPORT' r_type RG | LG 'EXTENSION' r_type RG | 'import' r_type ';' | 'extension' r_type ( 'reexport' )? ';' );
    public final void r_nsImport() throws RecognitionException {
        try {
        	/** START EDITED */
        	if(backtracking ==0) {
    		   ruleEntered("r_nsImport");
    		}
    		/** END EDITED */
            // src/org/eclipse/xpand3/parser/Xpand3.g:21:12: ( LG 'IMPORT' r_type RG | LG 'EXTENSION' r_type RG | 'import' r_type ';' | 'extension' r_type ( 'reexport' )? ';' )
            int alt4=4;
            switch ( input.LA(1) ) {
            case LG:
                {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==25) ) {
                    alt4=1;
                }
                else if ( (LA4_1==26) ) {
                    alt4=2;
                }
                else {
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("21:1: r_nsImport : ( LG 'IMPORT' r_type RG | LG 'EXTENSION' r_type RG | 'import' r_type ';' | 'extension' r_type ( 'reexport' )? ';' );", 4, 1, input);

                    throw nvae;
                }
                }
                break;
            case 27:
                {
                alt4=3;
                }
                break;
            case 29:
                {
                alt4=4;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("21:1: r_nsImport : ( LG 'IMPORT' r_type RG | LG 'EXTENSION' r_type RG | 'import' r_type ';' | 'extension' r_type ( 'reexport' )? ';' );", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:22:2: LG 'IMPORT' r_type RG
                    {
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,LG,FOLLOW_LG_in_r_nsImport63); if (failed) return ;
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,25,FOLLOW_25_in_r_nsImport65); if (failed) return ;
                    pushFollow(FOLLOW_r_type_in_r_nsImport67);
                    r_type();
                    _fsp--;
                    if (failed) return ;
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,RG,FOLLOW_RG_in_r_nsImport69); if (failed) return ;

                    }
                    break;
                case 2 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:23:2: LG 'EXTENSION' r_type RG
                    {
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,LG,FOLLOW_LG_in_r_nsImport74); if (failed) return ;
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,26,FOLLOW_26_in_r_nsImport76); if (failed) return ;
                    pushFollow(FOLLOW_r_type_in_r_nsImport78);
                    r_type();
                    _fsp--;
                    if (failed) return ;
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,RG,FOLLOW_RG_in_r_nsImport80); if (failed) return ;

                    }
                    break;
                case 3 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:24:2: 'import' r_type ';'
                    {
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,27,FOLLOW_27_in_r_nsImport85); if (failed) return ;
                    pushFollow(FOLLOW_r_type_in_r_nsImport87);
                    r_type();
                    _fsp--;
                    if (failed) return ;
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,28,FOLLOW_28_in_r_nsImport90); if (failed) return ;

                    }
                    break;
                case 4 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:25:2: 'extension' r_type ( 'reexport' )? ';'
                    {
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,29,FOLLOW_29_in_r_nsImport96); if (failed) return ;
                    pushFollow(FOLLOW_r_type_in_r_nsImport98);
                    r_type();
                    _fsp--;
                    if (failed) return ;
                    // src/org/eclipse/xpand3/parser/Xpand3.g:25:21: ( 'reexport' )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==30) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // src/org/eclipse/xpand3/parser/Xpand3.g:25:22: 'reexport'
                            {
                            /** START EDITED */
                            if(backtracking==0) {
                              tokenConsumed(null, (CommonToken) input.LT(1));
                            }
                            /** END EDITED */
                            match(input,30,FOLLOW_30_in_r_nsImport101); if (failed) return ;

                            }
                            break;

                    }

                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,28,FOLLOW_28_in_r_nsImport105); if (failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        	/** START EDITED */
        	if(backtracking==0) {
    		  ruleLeft("r_nsImport");
    		}
    		/** END EDITED */
        }
        return ;
    }
    // $ANTLR end r_nsImport


    // $ANTLR start r_abstractDeclaration
    // src/org/eclipse/xpand3/parser/Xpand3.g:28:1: r_abstractDeclaration : ( r_check | r_around | r_extension | r_definition | r_definitionAround );
    public final void r_abstractDeclaration() throws RecognitionException {
        try {
        	/** START EDITED */
        	if(backtracking ==0) {
    		   ruleEntered("r_abstractDeclaration");
    		}
    		/** END EDITED */
            // src/org/eclipse/xpand3/parser/Xpand3.g:28:23: ( r_check | r_around | r_extension | r_definition | r_definitionAround )
            int alt5=5;
            switch ( input.LA(1) ) {
            case 58:
                {
                alt5=1;
                }
                break;
            case 62:
                {
                alt5=2;
                }
                break;
            case Identifier:
            case 64:
            case 65:
            case 66:
            case 69:
            case 70:
            case 71:
                {
                alt5=3;
                }
                break;
            case LG:
                {
                int LA5_4 = input.LA(2);

                if ( (LA5_4==AROUND) ) {
                    alt5=5;
                }
                else if ( (LA5_4==DEFINE) ) {
                    alt5=4;
                }
                else {
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("28:1: r_abstractDeclaration : ( r_check | r_around | r_extension | r_definition | r_definitionAround );", 5, 4, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("28:1: r_abstractDeclaration : ( r_check | r_around | r_extension | r_definition | r_definitionAround );", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:29:2: r_check
                    {
                    pushFollow(FOLLOW_r_check_in_r_abstractDeclaration116);
                    r_check();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 2 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:30:2: r_around
                    {
                    pushFollow(FOLLOW_r_around_in_r_abstractDeclaration121);
                    r_around();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 3 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:31:2: r_extension
                    {
                    pushFollow(FOLLOW_r_extension_in_r_abstractDeclaration126);
                    r_extension();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 4 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:32:2: r_definition
                    {
                    pushFollow(FOLLOW_r_definition_in_r_abstractDeclaration131);
                    r_definition();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 5 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:33:2: r_definitionAround
                    {
                    pushFollow(FOLLOW_r_definitionAround_in_r_abstractDeclaration136);
                    r_definitionAround();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        	/** START EDITED */
        	if(backtracking==0) {
    		  ruleLeft("r_abstractDeclaration");
    		}
    		/** END EDITED */
        }
        return ;
    }
    // $ANTLR end r_abstractDeclaration


    // $ANTLR start r_definition
    // src/org/eclipse/xpand3/parser/Xpand3.g:38:1: r_definition : LG DEFINE r_identifier ( '(' ( r_declaredParameterList ( ( ',' )? '*' )? | '*' )? ')' )? 'FOR' r_type r_sequence ENDDEFINE RG ;
    public final void r_definition() throws RecognitionException {
        try {
        	/** START EDITED */
        	if(backtracking ==0) {
    		   ruleEntered("r_definition");
    		}
    		/** END EDITED */
            // src/org/eclipse/xpand3/parser/Xpand3.g:38:14: ( LG DEFINE r_identifier ( '(' ( r_declaredParameterList ( ( ',' )? '*' )? | '*' )? ')' )? 'FOR' r_type r_sequence ENDDEFINE RG )
            // src/org/eclipse/xpand3/parser/Xpand3.g:39:2: LG DEFINE r_identifier ( '(' ( r_declaredParameterList ( ( ',' )? '*' )? | '*' )? ')' )? 'FOR' r_type r_sequence ENDDEFINE RG
            {
            /** START EDITED */
            if(backtracking==0) {
              tokenConsumed(null, (CommonToken) input.LT(1));
            }
            /** END EDITED */
            match(input,LG,FOLLOW_LG_in_r_definition148); if (failed) return ;
            /** START EDITED */
            if(backtracking==0) {
              tokenConsumed(null, (CommonToken) input.LT(1));
            }
            /** END EDITED */
            match(input,DEFINE,FOLLOW_DEFINE_in_r_definition150); if (failed) return ;
            pushFollow(FOLLOW_r_identifier_in_r_definition152);
            r_identifier();
            _fsp--;
            if (failed) return ;
            // src/org/eclipse/xpand3/parser/Xpand3.g:39:25: ( '(' ( r_declaredParameterList ( ( ',' )? '*' )? | '*' )? ')' )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==31) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // src/org/eclipse/xpand3/parser/Xpand3.g:39:26: '(' ( r_declaredParameterList ( ( ',' )? '*' )? | '*' )? ')'
                    {
                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,31,FOLLOW_31_in_r_definition155); if (failed) return ;
                    // src/org/eclipse/xpand3/parser/Xpand3.g:39:30: ( r_declaredParameterList ( ( ',' )? '*' )? | '*' )?
                    int alt8=3;
                    int LA8_0 = input.LA(1);

                    if ( (LA8_0==Identifier||(LA8_0>=69 && LA8_0<=71)) ) {
                        alt8=1;
                    }
                    else if ( (LA8_0==33) ) {
                        alt8=2;
                    }
                    switch (alt8) {
                        case 1 :
                            // src/org/eclipse/xpand3/parser/Xpand3.g:39:31: r_declaredParameterList ( ( ',' )? '*' )?
                            {
                            pushFollow(FOLLOW_r_declaredParameterList_in_r_definition158);
                            r_declaredParameterList();
                            _fsp--;
                            if (failed) return ;
                            // src/org/eclipse/xpand3/parser/Xpand3.g:39:55: ( ( ',' )? '*' )?
                            int alt7=2;
                            int LA7_0 = input.LA(1);

                            if ( ((LA7_0>=32 && LA7_0<=33)) ) {
                                alt7=1;
                            }
                            switch (alt7) {
                                case 1 :
                                    // src/org/eclipse/xpand3/parser/Xpand3.g:39:56: ( ',' )? '*'
                                    {
                                    // src/org/eclipse/xpand3/parser/Xpand3.g:39:56: ( ',' )?
                                    int alt6=2;
                                    int LA6_0 = input.LA(1);

                                    if ( (LA6_0==32) ) {
                                        alt6=1;
                                    }
                                    switch (alt6) {
                                        case 1 :
                                            // src/org/eclipse/xpand3/parser/Xpand3.g:39:56: ','
                                            {
                                            /** START EDITED */
                                            if(backtracking==0) {
                                              tokenConsumed(null, (CommonToken) input.LT(1));
                                            }
                                            /** END EDITED */
                                            match(input,32,FOLLOW_32_in_r_definition161); if (failed) return ;

                                            }
                                            break;

                                    }

                                    /** START EDITED */
                                    if(backtracking==0) {
                                      tokenConsumed(null, (CommonToken) input.LT(1));
                                    }
                                    /** END EDITED */
                                    match(input,33,FOLLOW_33_in_r_definition164); if (failed) return ;

                                    }
                                    break;

                            }


                            }
                            break;
                        case 2 :
                            // src/org/eclipse/xpand3/parser/Xpand3.g:39:69: '*'
                            {
                            /** START EDITED */
                            if(backtracking==0) {
                              tokenConsumed(null, (CommonToken) input.LT(1));
                            }
                            /** END EDITED */
                            match(input,33,FOLLOW_33_in_r_definition170); if (failed) return ;

                            }
                            break;

                    }

                    /** START EDITED */
                    if(backtracking==0) {
                      tokenConsumed(null, (CommonToken) input.LT(1));
                    }
                    /** END EDITED */
                    match(input,34,FOLLOW_34_in_r_definition174); if (failed) return ;

                    }
                    break;

            }

            /** START EDITED */
            if(backtracking==0) {
              tokenConsumed(null, (CommonToken) input.LT(1));
            }
            /** END EDITED */
            match(input,35,FOLLOW_35_in_r_definition178); if (failed) return ;
            pushFollow(FOLLOW_r_type_in_r_definition180);
            r_type();
            _fsp--;
            if (failed) return ;
            pushFollow(FOLLOW_r_sequence_in_r_definition183);
            r_sequence();
            _fsp--;
            if (failed) return ;
            /** START EDITED */
            if(backtracking==0) {
              tokenConsumed(null, (CommonToken) input.LT(1));
            }
            /** END EDITED */
            match(input,ENDDEFINE,FOLLOW_ENDDEFINE_in_r_definition186); if (failed) return ;
            /** START EDITED */
            if(backtracking==0) {
              tokenConsumed(null, (CommonToken) input.LT(1));
            }
            /** END EDITED */
            match(input,RG,FOLLOW_RG_in_r_definition188); if (failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        	/** START EDITED */
        	if(backtracking==0) {
    		  ruleLeft("r_definition");
    		}
    		/** END EDITED */
        }
        return ;
    }
    // $ANTLR end r_definition

